# environment

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose-darwin.yml  docker-compose-linux.yml  docker-compose.yml  gitignore  requirements.txt  trains_setup.sh
.github/workflows/: main.yml
data/config/: trains.conf
dictfiles/: .userdic.csv
docker/: Dockerfile-jupyter  Dockerfile-mysql
env/: pyproject.toml
home/: Untitled.ipynb  sample.ipynb
home/.ipynb_checkpoints/: sample-checkpoint.ipynb
