[tool.poetry]
name = "home"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
jupyterlab = "^1.1"
numpy = "^1.17"
pandas = "^0.25.1"
matplotlib = "^3.1"
scikit-learn = "^0.21.3"
python-language-server = "^0.29.0"
pandas_profiling = "^2.3"
seaborn = "^0.9.0"
japanize_matplotlib = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
